<resources>
    <string name="app_name">Sport</string>
    <string name="todo">TODO</string>
    <string name="_00">00</string>
    <string name="frecuencia_cardiaca">FRECUENCIA CARDIACA</string>
    <string name="pasos">PASOS DADOS</string>
    <string name="iniciar">INICIAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
